Multi loader support (+neoforge)