@@ -1,26 +1,31 @@
 package net.lopymine.mossyplugin.core.manager;
 
 import java.io.*;
-import java.util.Arrays;
+import java.util.*;
 import lombok.experimental.ExtensionMethod;
 import me.modmuss50.mpp.*;
-import net.fabricmc.loom.task.RemapJarTask;
 import net.lopymine.mossyplugin.core.MossyPluginCore;
+import net.lopymine.mossyplugin.core.data.MossyProjectConfigurationData;
+import net.lopymine.mossyplugin.core.loader.LoaderManager;
 import net.lopymine.mossyplugin.core.util.MultiVersion;
 import org.codehaus.groovy.runtime.ResourceGroovyMethods;
 import org.gradle.api.*;
 import org.gradle.api.file.RegularFile;
 import org.gradle.api.provider.Provider;
+import org.gradle.jvm.tasks.Jar;
 import org.jetbrains.annotations.NotNull;
 
 @ExtensionMethod(MossyPluginCore.class)
 public class ModPublishManager {
 
-	public static void apply(@NotNull Project project, MossyPluginCore mossyPlugin, ModPublishExtension mpe) {
-		MultiVersion projectMultiVersion = mossyPlugin.getProjectMultiVersion();
-		String name = "[%s] %s v%s".formatted(projectMultiVersion.toVersionRange(), project.getProperty("data.mod_name"), project.getProperty("data.mod_version"));
+	public static void apply(@NotNull MossyProjectConfigurationData data, ModPublishExtension mpe) {
+		MossyPluginCore plugin = data.plugin();
+		LoaderManager loaderManager = data.loaderManager();
+		Project project = data.project();
 
-		String[] loaders = project.getProperty("loaders").split(" ");
+		MultiVersion projectMultiVersion = plugin.getProjectMultiVersion();
+		String name = "[%s/%s] %s v%s".formatted(data.loaderName(), projectMultiVersion.toVersionRange(), project.getProperty("data.mod_name"), project.getProperty("data.mod_version"));
+
 		String modrinthId = project.getProperty("modrinth_id");
 		String curseForgeId = project.getProperty("curseforge_id");
 		String[] dependsEmbeds = project.getProperty("depends_embeds").split(" ");
@@ -39,10 +44,10 @@ public class ModPublishManager {
 		boolean cannotUpload = testPublish || ((curseForgeApiKey == null && !curseForgeId.equals("none")) || (modrinthApiKey == null && !modrinthId.equals("none")));
 
 		mpe.getDisplayName().set(name);
-		mpe.getFile().set(getModFile(project));
-		mpe.getChangelog().set(getChangeLog(project));
+		mpe.getFile().set(getModFile(project, loaderManager));
+		mpe.getChangelog().set(getChangelog(project));
 		mpe.getType().set(getType(versionType));
-		mpe.getModLoaders().set(Arrays.asList(loaders));
+		mpe.getModLoaders().set(List.of(data.loaderName()));
 		mpe.getDryRun().set(cannotUpload);
 
 		if (!curseForgeId.equals("none")) {
@@ -114,8 +119,8 @@ public class ModPublishManager {
 		MossyPluginCore.LOGGER.logModule("MPP","Dry Run: %s", mpe.getDryRun().get());
 	}
 
-	private static Provider<RegularFile> getModFile(@NotNull Project project) {
-		return ((RemapJarTask) project.getTasks().getByName("remapJar")).getArchiveFile();
+	private static Provider<RegularFile> getModFile(@NotNull Project project, LoaderManager loaderManager) {
+		return ((Jar) project.getTasks().getByName(loaderManager.getJarTaskName())).getArchiveFile();
 	}
 
 	private static ReleaseType getType(String versionType) {
@@ -127,7 +132,7 @@ public class ModPublishManager {
 		};
 	}
 
-	private static String getChangeLog(@NotNull Project project) {
+	private static String getChangelog(@NotNull Project project) {
 		try {
 			File file = project.getRootFile("CHANGELOG.md");
 			if (file.exists()) {
